# JsonSerialize

./: .gitignore  .gitmodules  CMakeLists.txt  JsonSerialize.hpp  LICENSE  README.md
.github/workflows/: cmake.yml
example/: CMakeLists.txt
test/: Api.cpp  Array.cpp  CMakeLists.txt  base.cpp
